--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.2.18",
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
