--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
+    "bcryptjs": "^2.3.0",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.6",
     "cookie-parser": "~1.3.5",
