--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "bower i"
+  },
+  "engines": {
+    "node": "5.10.1"
   },
   "dependencies": {
     "angular": "^1.5.5",
@@ -17,6 +21,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "jsonwebtoken": "^6.2.0",
+    "moment": "^2.13.0",
     "mongoose": "^4.4.15",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
