--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": "5.10.1"
   },
   "dependencies": {
+    "bower": "^1.7.9",
     "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "bcryptjs": "^2.3.0",
