--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "node": "5.10.1"
   },
   "dependencies": {
-    "bower": "^1.7.9",
     "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "bcryptjs": "^2.3.0",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.6",
+    "bower": "^1.7.9",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
@@ -25,6 +25,7 @@
     "moment": "^2.13.0",
     "mongoose": "^4.4.15",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "swig": "^1.4.2"
   }
 }
